@@ -1,3 +1,8 @@
+2009-07-09  Kai Tietz  <kai.tietz@onevision.com>
+
+	PR/2818441
+	* setjmp.h: add for setjmp/setjmp3 attribute __returns_twice__.
+
 2009-07-04  Ozkan Sezer  <sezeroz@gmail.com>
 
 	* _mingw.h: added comments after many endifs for better clarity.
